<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_explore">Explore</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount: </string>
    <string name="any_difficulty">Any Difficulty</string>
    <string name="_10"> 10</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">start</string>
    <string name="brain_question" translatable="false">?</string>
    <string name="category">Category</string>
    <string name="correct_answers">Correct answers</string>
    <string name="version">version</string>
    <string name="clear_history">Clear history</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="share_this_app">Share this app</string>
    <string name="_12_may_2019_20_32">12 may 2019 20:32</string>
    <string name="any_categories">Any Categories</string>

    <string-array name="category_array">
        <item>All</item>
        <item>History</item>
        <item>Math</item>
        <item>Astronomy</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>