<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/title_settings"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </Toolbar>

    <View
        android:id="@+id/view"
        style="@style/style_view_lines_settings"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_settings"
        style="@style/style_settings_tv"
        android:layout_width="match_parent"
        android:text="@string/share_this_app"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <View
        android:id="@+id/view1"
        style="@style/style_view_lines_settings"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />

    <TextView
        android:id="@+id/tv_rate_us"
        style="@style/style_settings_tv"
        android:layout_width="match_parent"
        android:text="@string/rate_us"
        android:background="?attr/selectableItemBackground"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <View
        android:id="@+id/view2"
        style="@style/style_view_lines_settings"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_us" />

    <TextView
        android:id="@+id/tv_leave_feedback"
        style="@style/style_settings_tv"
        android:layout_width="match_parent"
        android:background="?attr/selectableItemBackground"
        android:text="@string/leave_feedback"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <View
        android:id="@+id/view3"
        style="@style/style_view_lines_settings"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_leave_feedback" />

    <TextView
        android:id="@+id/tv_clear_history"
        style="@style/style_settings_tv"
        android:layout_width="match_parent"
        android:text="@string/clear_history"
        android:background="?attr/selectableItemBackground"
        android:textColor="#BE52F2"
        app:layout_constraintTop_toBottomOf="@id/view3" />

    <View
        android:id="@+id/view4"
        style="@style/style_view_lines_settings"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_clear_history" />

    <TextView
        android:id="@+id/tv_version_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/version"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>