<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.explore.MainFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/quiz"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </Toolbar>

    <ImageView
        android:id="@+id/image_main_ill"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="@dimen/main_illustration_padding"
        android:src="@drawable/main_illustration"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/main_rl_padding_end_start"
        android:paddingEnd="@dimen/main_rl_padding_end_start"
        app:layout_constraintTop_toBottomOf="@id/image_main_ill">

        <TextView
            android:id="@+id/tv_question_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/questions_amount"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_seek_bar_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_question_amount"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/tv_question_amount"
            android:text="@string/_10"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seek_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_question_amount"
            android:layout_marginStart="@dimen/seek_bar_margin_start"
            android:layout_marginTop="5dp"
            android:max="20"
            android:progress="10"
            android:progressBackgroundTint="#ECEBED"
            android:progressTint="#BE52F2"
            android:thumbOffset="0dp"
            android:thumbTint="#BE52F2" />

        <TextView
            android:id="@+id/tv_category_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seek_bar_main"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            android:textSize="12sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_categ"
            style="@style/card_dropdown_tvs"
            android:layout_below="@id/tv_category_main"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/text_input_layout_dropdown_tv"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTVCategory"
                    style="@style/autocompleteTV_dropdown"
                    android:text="@string/all"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_difficulty_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_categ"
            android:layout_marginTop="10dp"
            android:text="@string/difficulty"
            android:textSize="12sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_difficulty"
            style="@style/card_dropdown_tvs"
            android:layout_below="@id/tv_difficulty_main"
            app:cardCornerRadius="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout"
                style="@style/text_input_layout_dropdown_tv"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTV_difficulty"
                    style="@style/autocompleteTV_dropdown"
                    android:text="@string/all"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_start_main"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_below="@id/card_difficulty"
            android:layout_centerInParent="true"
            android:layout_marginTop="64dp"
            android:backgroundTint="#6979F8"
            android:text="@string/start"
            android:textSize="15sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>